[package]
name = "eng-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
tui-textarea = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

postcard = { version = "1.0.7", features = ["alloc"] }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
dirs-next = "2.0.0"
confy = "0.5.1"
serde_derive = "1.0.193"
