[package]
name = "englog"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Keep a work log as a software developer for looking back on during yearly reviews etc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"]}
ratatui = "0.24.0"
tui-textarea = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0.7", features = ["alloc"] }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
dirs-next = "2.0.0"
confy = "0.5.1"
serde_derive = "1.0.193"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.10"
futures = "0.3.29"
